@@ -8,14 +8,13 @@ remote anonymous {
 	exchange_mode aggressive;
 	certificate_type x509 "server.crt" "server.key";
 	my_identifier asn1dn;
-	proposal_check obey;
+	proposal_check claim;
 	generate_policy on;
 	nat_traversal on;
 	dpd_delay 20;
 	ike_frag on;
-	script "/etc/racoon/phase1-down.sh" phase1_down;
 	proposal {
-		encryption_algorithm 3des;
+		encryption_algorithm aes;
 		hash_algorithm sha1;
 		authentication_method hybrid_rsa_server;
 		dh_group 2;
@@ -30,12 +29,13 @@ mode_cfg {
 	dns4 10.0.12.1;
 	wins4 10.0.12.1;
 	banner "/etc/racoon/motd";
+	pfs_group 2;
 }	       
 		
 sainfo anonymous {
 	pfs_group 2;
-	lifetime time 12 hour;
-	encryption_algorithm 3des, cast128, blowfish 448;
+	lifetime time 1 hour;
+	encryption_algorithm aes;
 	authentication_algorithm hmac_sha1;
 	compression_algorithm deflate;
 }   
